# openapi.yaml
@@ -16,6 +16,46 @@ info:
     url: https://github.com/nattsu39/seer-pet-code/blob/main/LICENSE
   version: 1.0.0
 paths:
+  /seerbp.petcode.server.v1.PetCodeService/ConvertPetCodeMessageDeprecatedData:
+    post:
+      tags:
+        - 转换
+        - seerbp.petcode.server.v1.PetCodeService
+      summary: 将 PetCodeMessage 中的弃用数据转换为新数据
+      description: 将已废弃字段转换为当前推荐字段，例如将 PetInfo.extra_hp 转换为 PetAbilityBonus 中一个全新的 TYPE_BASEVALUE 类型体力加成项。
+      operationId: convert_pet_code_message_deprecated_data
+      parameters:
+        - name: Connect-Protocol-Version
+          in: header
+          description: Define the version of the Connect protocol
+          schema:
+            $ref: '#/components/schemas/connect-protocol-version'
+          example: 1
+        - name: Connect-Timeout-Ms
+          in: header
+          description: Define the timeout, in ms
+          schema:
+            $ref: '#/components/schemas/connect-timeout-header'
+          example: 1000
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/seerbp.petcode.server.v1.ConvertPetCodeMessageDeprecatedDataRequest'
+        required: true
+      responses:
+        default:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/connect.error'
+        "200":
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/seerbp.petcode.server.v1.ConvertPetCodeMessageDeprecatedDataResponse'
   /seerbp.petcode.server.v1.PetCodeService/DecodePetCodeMessageFromBase64:
     post:
       tags:
@@ -162,6 +202,24 @@ components:
           description: Deserialized error detail payload. The 'type' field indicates the schema. This field is for easier debugging and should not be relied upon for application logic.
       additionalProperties: true
       description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message, with an additional debug field for ConnectRPC error details.
+    seerbp.petcode.server.v1.ConvertPetCodeMessageDeprecatedDataRequest:
+      type: object
+      properties:
+        petCodeMessage:
+          allOf:
+            - $ref: '#/components/schemas/seerbp.petcode.v1.PetCodeMessage'
+          title: pet_code_message
+      title: ConvertPetCodeMessageDeprecatedDataRequest
+      additionalProperties: false
+    seerbp.petcode.server.v1.ConvertPetCodeMessageDeprecatedDataResponse:
+      type: object
+      properties:
+        petCodeMessage:
+          allOf:
+            - $ref: '#/components/schemas/seerbp.petcode.v1.PetCodeMessage'
+          title: pet_code_message
+      title: ConvertPetCodeMessageDeprecatedDataResponse
+      additionalProperties: false
     seerbp.petcode.server.v1.DecodePetCodeMessageFromBase64Request:
       type: object
       properties:
@@ -574,7 +632,7 @@ components:
           format: int32
           description: |-
             精灵额外体力上限，该字段已经废弃，请使用 PetAbilityBonus 中的 TYPE_BASEVALUE 类型来获取/设置精灵的额外体力上限。
-             调用方应检查该字段是否存在，如果存在则必须将其合并到 PetAbilityBonus 中的 TYPE_BASEVALUE 类型加成中。
+             调用方应检查该字段的值，如果非 0 则必须将其转换为 PetAbilityBonus 中一个全新的 TYPE_BASEVALUE 类型加成项，而不是与其他已有的加成项合并。
           deprecated: true
         effects:
           type: array
